// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration renders confirmation 1`] = `
<AppLayout
  navProps={
    Object {
      "cart": Cart {},
      "link": "lookup",
    }
  }
>
  <ConfirmationContent
    contactEmail="ttoe@squirrelzone.net"
    orderId="123-456-7"
  />
</AppLayout>
`;

exports[`integration renders payment 1`] = `
<AppLayout
  navProps={null}
>
  <PaymentContent
    cart={Cart {}}
    order={
      Order {
        "cardElementComplete": false,
        "cardElementError": null,
        "info": Object {
          "billingAddress1": "",
          "billingAddress2": "",
          "billingAddressSameAsShippingAddress": true,
          "billingCity": "",
          "billingState": "",
          "billingZip": "",
          "cardLast4": null,
          "cardToken": null,
          "cardholderName": "",
          "contactEmail": "",
          "contactName": "",
          "contactPhone": "",
          "shippingAddress1": "",
          "shippingAddress2": "",
          "shippingCity": "",
          "shippingCompanyName": "",
          "shippingName": "",
          "shippingState": "",
          "shippingZip": "",
          "storeBilling": false,
          "storeContactAndShipping": false,
        },
        "processing": false,
        "processingError": null,
        "updateStorageDisposer": null,
      }
    }
    stripe={null}
    submit={[Function]}
  />
</AppLayout>
`;

exports[`integration renders shipping 1`] = `
<AppLayout
  navProps={null}
>
  <ShippingContent
    cart={Cart {}}
    order={
      Order {
        "cardElementComplete": false,
        "cardElementError": null,
        "info": Object {
          "billingAddress1": "",
          "billingAddress2": "",
          "billingAddressSameAsShippingAddress": true,
          "billingCity": "",
          "billingState": "",
          "billingZip": "",
          "cardLast4": null,
          "cardToken": null,
          "cardholderName": "",
          "contactEmail": "",
          "contactName": "",
          "contactPhone": "",
          "shippingAddress1": "",
          "shippingAddress2": "",
          "shippingCity": "",
          "shippingCompanyName": "",
          "shippingName": "",
          "shippingState": "",
          "shippingZip": "",
          "storeBilling": false,
          "storeContactAndShipping": false,
        },
        "processing": false,
        "processingError": null,
        "updateStorageDisposer": null,
      }
    }
    submit={[Function]}
  />
</AppLayout>
`;
